--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/utilities.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Tobezzi's Home</title>
@@ -21,7 +28,7 @@
         <nav>
           <ul>
             <li>
-              <a href="#" style="--clr: #3fed2f; --i: 0"
+              <a href="#Porfolio" style="--clr: #3fed2f; --i: 0"
                 ><span>Portfolio</span></a
               >
             </li>
@@ -145,25 +152,122 @@
       </div>
     </section>
     <!-- portfolio -->
-    <section class="porfolio">
+    <section id="Porfolio" class="porfolio">
       <h2>Portfolio</h2>
-      <div class="container flex">
+      <div class="container grid grid-3">
         <div class="card">
           <img src="images/TO.png" alt="" />
           <div>
             <h4>Project Name:</h4>
-            <p>Description:</p>
+            <p>Tobezzi's porfolio</p>
           </div>
           <div>
             <h4>Description:</h4>
-            <p>This is my portfolio</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor. Aenean massa <strong>strong</strong>.
+              Cum sociis natoque penat
+            </p>
           </div>
           <div>
-            <h4>Link:</h4>
-            <a href="#">This is my portfolio</a>
+            <a href="#" class="btn"> Check it out</a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/TO.png" alt="" />
+          <div>
+            <h4>Project Name:</h4>
+            <p>Tobezzi's porfolio</p>
+          </div>
+          <div>
+            <h4>Description:</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor. Aenean massa <strong>strong</strong>.
+              Cum sociis natoque penat
+            </p>
+          </div>
+          <div>
+            <a href="#" class="btn"> Check it out</a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/TO.png" alt="" />
+          <div>
+            <h4>Project Name:</h4>
+            <p>Tobezzi's porfolio</p>
+          </div>
+          <div>
+            <h4>Description:</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor. Aenean massa <strong>strong</strong>.
+              Cum sociis natoque penat
+            </p>
+          </div>
+          <div>
+            <a href="#" class="btn"> Check it out</a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/TO.png" alt="" />
+          <div>
+            <h4>Project Name:</h4>
+            <p>Tobezzi's porfolio</p>
+          </div>
+          <div>
+            <h4>Description:</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor. Aenean massa <strong>strong</strong>.
+              Cum sociis natoque penat
+            </p>
+          </div>
+          <div>
+            <a href="#" class="btn"> Check it out</a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/TO.png" alt="" />
+          <div>
+            <h4>Project Name:</h4>
+            <p>Tobezzi's porfolio</p>
+          </div>
+          <div>
+            <h4>Description:</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor. Aenean massa <strong>strong</strong>.
+              Cum sociis natoque penat
+            </p>
+          </div>
+          <div>
+            <a href="#" class="btn"> Check it out</a>
           </div>
         </div>
       </div>
     </section>
+    <!-- footer -->
+    <footer class="footer bg-dark py-5">
+      <div class="container grid grid-3">
+        <div>
+          <h1>Tobezzi</h1>
+          <p>Copyright &copy; 2022</p>
+        </div>
+
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#Portfolio">Portfolio</a></li>
+            <li><a href="#Form">Let's talk</a></li>
+          </ul>
+        </nav>
+        <div class="social">
+          <a href="#"><i class="fab fa-github fa-2x"></i></a>
+
+          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
