--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
               >
             </li>
             <li>
-              <a href="#" style="--clr: #3fed2f; --i: 0"><span>Blog</span></a>
+              <a href="blog.html" style="--clr: #3fed2f; --i: 0"
+                ><span>Blog</span></a
+              >
             </li>
           </ul>
         </nav>
@@ -156,99 +158,56 @@
       <h2>Portfolio</h2>
       <div class="container grid grid-3">
         <div class="card">
-          <img src="images/TO.png" alt="" />
+          <img
+            onclick="window.location.href = '#Home'"
+            src="images/TO.png"
+            alt=""
+          />
+
           <div>
-            <h4>Project Name:</h4>
-            <p>Tobezzi's porfolio</p>
-          </div>
-          <div>
-            <h4>Description:</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
               commodo ligula eget dolor. Aenean massa <strong>strong</strong>.
               Cum sociis natoque penat
             </p>
-          </div>
-          <div>
-            <a href="#" class="btn"> Check it out</a>
           </div>
         </div>
         <div class="card">
-          <img src="images/TO.png" alt="" />
+          <img
+            onclick="window.location.href = '#Home'"
+            src="images/TO.png"
+            alt=""
+          />
+
           <div>
-            <h4>Project Name:</h4>
-            <p>Tobezzi's porfolio</p>
-          </div>
-          <div>
-            <h4>Description:</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
               commodo ligula eget dolor. Aenean massa <strong>strong</strong>.
               Cum sociis natoque penat
             </p>
-          </div>
-          <div>
-            <a href="#" class="btn"> Check it out</a>
           </div>
         </div>
         <div class="card">
-          <img src="images/TO.png" alt="" />
+          <img
+            onclick="window.location.href = '#Home'"
+            src="images/TO.png"
+            alt=""
+          />
+
           <div>
-            <h4>Project Name:</h4>
-            <p>Tobezzi's porfolio</p>
-          </div>
-          <div>
-            <h4>Description:</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
               commodo ligula eget dolor. Aenean massa <strong>strong</strong>.
               Cum sociis natoque penat
             </p>
-          </div>
-          <div>
-            <a href="#" class="btn"> Check it out</a>
-          </div>
-        </div>
-        <div class="card">
-          <img src="images/TO.png" alt="" />
-          <div>
-            <h4>Project Name:</h4>
-            <p>Tobezzi's porfolio</p>
-          </div>
-          <div>
-            <h4>Description:</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-              commodo ligula eget dolor. Aenean massa <strong>strong</strong>.
-              Cum sociis natoque penat
-            </p>
-          </div>
-          <div>
-            <a href="#" class="btn"> Check it out</a>
-          </div>
-        </div>
-        <div class="card">
-          <img src="images/TO.png" alt="" />
-          <div>
-            <h4>Project Name:</h4>
-            <p>Tobezzi's porfolio</p>
-          </div>
-          <div>
-            <h4>Description:</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-              commodo ligula eget dolor. Aenean massa <strong>strong</strong>.
-              Cum sociis natoque penat
-            </p>
-          </div>
-          <div>
-            <a href="#" class="btn"> Check it out</a>
           </div>
         </div>
       </div>
     </section>
+
     <!-- footer -->
     <footer class="footer bg-dark py-5">
+      <div class="line"></div>
       <div class="container grid grid-3">
         <div>
           <h1>Tobezzi</h1>
