--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
           </div>
           <p>
             I am a developer and web 3 native. Lorem ipsum dolor sit amet,
-            consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-            Aenean massa <strong>strong</strong>. Cum sociis.
+            consectetuer adipiscing elit. I am the king of the south
           </p>
         </div>
         <div>
