--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="form-text">
           <h3>I write sometimes about technology and web 3</h3>
           <p>Fun Fact: I am a certified writer!</p>
-          <a class="btn btn-outline" href="">READ BLOG</a>
+          <a class="btn btn-outline" href="blog.html">READ BLOG</a>
         </div>
 
         <div id="Form" class="request-form card">
@@ -221,9 +221,13 @@
           </ul>
         </nav>
         <div class="social">
-          <a href="#"><i class="fab fa-github fa-2x"></i></a>
+          <a href="https://github.com/tobezhanabi"
+            ><i class="fab fa-github fa-2x"></i
+          ></a>
 
-          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+          <a href="https://twitter.com/HanabiPlug"
+            ><i class="fab fa-twitter fa-2x"></i
+          ></a>
         </div>
       </div>
     </footer>
