--- a/blog.html
+++ b/blog.html
@@ -273,7 +273,7 @@
       <div class="signin">
         <div class="content">
           <h2>Coming Soon!</h2>
-          <a href="index.html">Go back</a>
+          <a href="https://tobez.netlify.app/">Go back</a>
         </div>
       </div>
     </section>
